--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.19",
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4",
+    "react": "^16.6.0-alpha.8af6728",
+    "react-native": "^0.57.4",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.9",
     "react-native-modal": "^7.0.1",
