--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.19",
-    "react": "^16.6.0-alpha.8af6728",
-    "react-native": "^0.57.4",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.9",
     "react-native-modal": "^7.0.1",
@@ -17,10 +17,14 @@
     "react-navigation": "^3.0.0"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.0",
-    "react-test-renderer": "16.6.0-alpha.8af6728"
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
