--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "dependencies": {
     "lodash": "^4.17.19",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.0.9",
     "react-native-modal": "^7.0.1",
-    "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.0"
+    "react-native-vector-icons": "^7.1.0",
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
